# gatherlink

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_problem.yml  feature_request.yml  performance_report.yml  setup_help.yml  speed_result.yml
configs/examples/: dns-helper.json  minimal-client.json  minimal-ipv6-client.json  minimal-ipv6-server.json  minimal-server.json  shared-sink-server.json  socks5-helper.json  tcp-forward-helper.json  windows-shared-sink-server.json  windows-shared-sink-source-a.json  windows-shared-sink-source-b.json  windows-two-node-a.json  windows-two-node-b.json  wireguard-client.json  wireguard-dual-profile-client.json  wireguard-dual-profile-server.json  wireguard-server.json
configs/hyperv/: three-vm-shared-sink-server.json  three-vm-shared-sink-source-a.json  three-vm-shared-sink-source-c.json  two-vm-node-a.json  two-vm-node-b.json
configs/lab/: local-dual-path-encrypted.json  local-dual-path-ipv6.json  local-dual-path.json  local-three-path.json
crates/crypto/: Cargo.toml
crates/crypto/src/: envelope.rs  errors.rs  keys.rs  lib.rs  nonce.rs  replay.rs
crates/crypto/tests/: envelope.rs  keys.rs  replay.rs
crates/dataplane/: Cargo.toml
crates/protocol/: Cargo.toml
crates/pybindings/: Cargo.toml  pyproject.toml
crates/pybindings/src/: dto.rs  engine_api.rs  errors.rs  lib.rs  relay_api.rs
crates/pybindings/tests/: engine_api.rs
crates/time-helper/: Cargo.toml
docs/: README.md  access-policy-full.md  access-policy.md  api-surface.md  appliance-update-strategy.md  architecture-contract.md  architecture.md  capability-negotiation.md  captive-portal-helper.md  configuration.md  deployment-archetypes-full.md  deployment-archetypes.md  design-principles.md  diagnostics-events.md  diagnostics.md  dns-helper.md  failure-model.md  identity-and-topology-full.md  identity-and-topology.md  ipsec-helper-full.md  ipsec-helper.md  ipv6-strategy.md  lab-demo.md  local-dual-path-lab.md  loop-prevention-full.md  loop-prevention.md  overlay-naming-full.md  overlay-naming.md  overlay-routing-full.md  overlay-routing.md  path-lifecycle.md  performance-philosophy.md  plaintext-security-mode.md  policy-advisor-full.md  policy-advisor.md  project-living-assessment.md  project-story.md  protocol-notes.md  protocol.md  relay-fabric-full.md  (+13 more)
docs/architecture/: README.md  api-surface.md  architecture-contract.md  architecture.md  design-principles.md  performance-philosophy.md  plugin-strategy.md  source-map.md
docs/benchmarks/: README.md  external-aggregation-comparison.md  hyperv-performance-history.md  hyperv-performance-log.md  thresholds.json  thresholds.md  wireguard-over-gatherlink-status.md
docs/future/: README.md  access-policy.md  identity-and-topology-full.md  identity-and-topology.md  loop-prevention-full.md  loop-prevention.md  overlay-naming-full.md  overlay-naming.md  overlay-routing-full.md  overlay-routing.md
docs/helpers/: README.md  captive-portal-helper-full.md  dns-helper.md  helper-priorities.md  ipsec-helper.md  policy-advisor.md  relay-fabric-full.md  relay-fabric.md  socks5-helper.md  tcp-forwarding-helper.md  time-sync.md  traffic-split-helper.md  wireguard-helper.md
docs/labs/: README.md  http3-datagram-carrier.md  hyperv-two-vm-lab.md  hyperv-vm-lab.md  lab-bundles.md  lab-demo.md  local-dual-path-lab.md  quic-traefik-proxy.md  real-vm-acceptance.md  wsl-two-distro-lab.md
docs/operations/: README.md  development-discipline.md  diagnostics-dictionary.md  diagnostics-events.md  diagnostics.md  documentation-maintenance.md  library-selection.md  operator-runbook.md  release-artifacts.md  release-checklist.md  release-development-process.md  testing-strategy.md  troubleshooting-guide.md  user-documentation.md  v0.9-operator-runbook.md  v0.9-release-checklist.md  v0.9-troubleshooting-guide.md  v0.9.1-release-artifacts.md  v1-operator-runbook.md  v1-release-checklist.md  v1-troubleshooting-guide.md
docs/protocol/: README.md  control-context.md  protocol-notes.md  protocol.md  relay-session-lifecycle.md  relay-trust-model.md  (+3 more)
tools/: dns_probe.py  dns_static_server.py  export_observed_status_profile.py  export_path_profile.py  http_probe.py  run_three_path_profile_bench.py  run_wsl_mvp_acceptance.ps1  setup_wsl_private_lan.ps1  socks5_gatherlink_acceptance.py  socks5_http_probe.py  tcp_stream_speed.py  udp_pressure.rs  udp_probe.py  wsl_shape_private_lan.sh
(+430 files in other folders)
