[project]
name = "gatherlink"
version = "0.1.0"
description = "Carrier-aware multipath UDP transport"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"
