[package]
name = "gatherlink-crypto"
version = "0.9.1"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
