[package]
name = "gatherlink-pybindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "gatherlink_pybindings"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
gatherlink-dataplane = { path = "../dataplane" }
gatherlink-protocol = { path = "../protocol" }
pyo3 = { version = "0.22", features = ["auto-initialize"] }
